test/sema/typeck/generic/type-param-name-no-call-class.out
error: Unknown associated type.
--> type-param-name-no-call-class.dora:4:17
 | class SomeClass[T: X]
 | impl[T: X] SomeClass[T] {
 |     fn f() { T::foo; }
                   ~~~
 | }
 | 
1 error found.
