test/sema/typeck/generic/type-param-name-no-call-class.dora
trait X { fn foo(): Int32; }
class SomeClass[T: X]
impl[T: X] SomeClass[T] {
    fn f() { T::foo; }
}

====================
error: module expected.
--> type-param-name-no-call-class.dora:4:14
 | class SomeClass[T: X]
 | impl[T: X] SomeClass[T] {
 |     fn f() { T::foo; }
                ~~~~~~
 | }
 | 
1 error found.
